made some changes on paul slide

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             </div>
                             Html / CSS
                         </div>
-                        <div id="cta6" class="cta flex-center">
+                        <div id="cta6" class="cta flex-center2">
                             Next Slide
                         </div>
                     </div>
