created link to full access page

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
                                                 <div class="slideImage" style="background: white;">
                                                 </div>
                                             </div>
-                                            <div class="classified">
+                                            <div class="classified flex-column">
                                                 CLASSIFIED
+                                                <a class="link caption" href=""> click here to view </a>
                                             </div>
                                         </div>
                                         <div id="slide-right" class="cta-small">
@@ -225,8 +226,9 @@
                                             <div class="slideImage2" style="background: white;">
                                             </div>
                                         </div>
-                                        <div class="classified">
+                                        <div class="classified flex-column">
                                             CLASSIFIED
+                                            <a class="link caption" href=""> click here to view </a>
                                         </div>
                                     </div>
                                     <div id="slide-right2" class="cta-small">
