--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                             </div>
                                             <div class="classified flex-column">
                                                 CLASSIFIED
-                                                <a class="link caption" href=""> click here to view </a>
+                                                <a class="link caption" href="https://git.tcfbank.com/pages/t169396/nick-intern-presentation/"> click here to view </a>
                                             </div>
                                         </div>
                                         <div id="slide-right" class="cta-small">
@@ -228,7 +228,7 @@
                                         </div>
                                         <div class="classified flex-column">
                                             CLASSIFIED
-                                            <a class="link caption" href=""> click here to view </a>
+                                            <a class="link caption" href="https://git.tcfbank.com/pages/t169396/nick-intern-presentation/"> click here to view </a>
                                         </div>
                                     </div>
                                     <div id="slide-right2" class="cta-small">
