fixed a few typos

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <strong>Project:</strong> new IVR Test Tool.
                             </div>
                             <div class="text3">
-                                <strong>Why:</strong> All of the source code had been lost for the old test tool, and there was many approvements that could be made, so we made a new one!
+                                <strong>Why:</strong> All of the source code had been lost for the old test tool, and there was many improvements that could be made, so we made a new one!
                             </div>
                             <div class="text3">
                                 <strong> Improvements include: </strong>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="text2">
-                        I am so thankful to have been apart of this awesome team full of very intelligent people who taught me so much. Many Many Thanks Guys!
+                        I am so thankful to have been apart of this awesome team full of very intelligent people who taught me so much. Many many Thanks Guys!
                     </div>
                     <div id="cta3" class="cta">
                         On to the next Project!
@@ -293,7 +293,7 @@
                         <div class="right flex-center non-mobile">
                             <div class="text-center text2">
                                 Paul is truely a computer genuis and taught me so much over the course of a month.
-                                He was a very very busy guy but always took time to help me and others with questions.
+                                He was a very busy guy but always took time to help me and others with questions.
                             </div>
                             <div class="text-center text2">
                                 So <strong>Thank You</strong> Paul for everything you do!
@@ -304,7 +304,7 @@
                      <div class="right flex-center">
                         <div class="text-center text2">
                             Paul is truely a computer genuis and taught me so much over the course of a month.
-                            He was a very very busy guy but always took time to help me and others with questions.
+                            He was a very busy guy but always took time to help me and others with questions.
                         </div>
                         <div class="text-center text2">
                             So <strong>Thank You</strong> Paul for everything you do!
@@ -358,9 +358,9 @@
 
                 <div id="farewell" class="slide">
                     <h1>Farewell</h1>
-                    <div class="text2">This has been a great summer. I learned a lot about technologies, programming, developing in teams, and the professional world.
+                    <div class="text2">This has been a great summer. I learned tons more about new technologies, programming, developing in teams, and the professional world.
                         I also met a lot of awesome people that helped me along the way and taught me so much as well.
-                        So thank you to you all even if I didn't mention you. My time here has shaped my future and I couldn't have asked for anything more.
+                        So thank you to you all even if I didn't mention you here. My time here has shaped my future and I couldn't have asked for anything more.
                     </div>
                     <div id="contact-cta" class="cta">
                         Thank you TCF!!
